<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    tools:context=".fragment.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_logo_banner" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/facebook"
                    android:elevation="4dp"
                    android:gravity="center"
                    style="@style/Base.Widget.AppCompat.Button">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_facebook" />

                    <include layout="@layout/divider_btn" />

                    <Button
                        android:id="@+id/btnLoginFb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/facebook"
                        android:padding="4dp"
                        android:text="@string/log_in_with_facebook" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/twitter"
                    android:gravity="center"
                    android:elevation="4dp"
                    style="@style/Base.Widget.AppCompat.ButtonBar">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_twitter" />

                    <include layout="@layout/divider_btn" />

                    <Button
                        android:id="@+id/btnLoginTwitter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/twitter"
                        android:padding="4dp"
                        android:text="@string/log_in_with_twitter" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/googlePlus"
                    android:gravity="center"
                    style="@style/Base.Widget.AppCompat.Button">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_google" />

                    <include layout="@layout/divider_btn" />

                    <Button
                        android:id="@+id/btnLoginG"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/googlePlus"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:paddingTop="4dp"
                        android:text="@string/log_in_with_google" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_transparent_white"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/log_in" />

                <Button
                    android:id="@+id/btnSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_transparent_white"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/skip_log_in" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSignUpDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Dont_have_an_account"
                    android:textSize="@dimen/text_subhead" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorAccent2"
                    android:textSize="@dimen/text_header" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
