<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_create_account"
    tools:context="com.techhaven.schooltweets.fragment.CreateAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_vertical_margin">

        <TextView
            android:id="@+id/backButton"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_back"
            android:gravity="center"
            android:text="Cancel" />

        <TextView
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:text="Sign up" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="@dimen/fragment_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="30dp">

                    <EditText
                        android:id="@+id/etUsername"
                        style="@style/EditTextRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/username"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/EditTextRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/EditTextRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/etRePassword"
                        style="@style/EditTextRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/btnSignUp"
                        style="@style/Base.Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_transparent_white"
                        android:text="@string/btn_sign_up" />

                </LinearLayout>
                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    >-->
                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="40dp"
                    android:paddingTop="40dp"
                    android:gravity="center_horizontal"
                    android:text="By Continuing,you accept the\n Terms of Use and Privacy Policy" />
                <!--</LinearLayout>-->
            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</LinearLayout>
